LIST OF CHANGES FOR NPG-QC PACKAGE

release 56.0
 - use test data that are publicly available
 - getting autoqc module versions made to work with non-numeric versions
 - redundant Gerald summary loader code removed
 - unused test data removed
 - in test runfolders that are used GERALD directories renamed to PB_cal
     since gerald_path is going to be removed from npg_tracking::illumina::run::folder

release 55.10
 - remove default for verify_bam_id.pass

release 55.9
 - minor bug fix for verify_bam_id

release 55.8
 - remove Fey modules from npg_qc::autoqc::db namespace, t/60-autoqc-db*.t tests 
   and test data not used elsewhere
 - qc_db_delete_autoqc script:
     updated help message
     fix for a bug that resulted in no data deleted unless a list of checks to
       delete was given explicitly 

release 55.7
 - tag sniff usage message
 - minor code changes to a couple of checks
 - test/test data for verify_bam_id
 - preserve case when generating DBIx binding since verify_bam_id
   has mixed case column names

release 55.6
 - exclude verify_bam_id (not run by the pipeline yet) from checking a set
   of archived autoqc results for completeness

release 55.5
 - patch for bin/call_gtck_composite_rpt.pl

release 55.4
 - patch for npg_qc::autoqc::checks::upstream_tags - extra imports required

release 55.3
 - 'check' option for the script deleting autoqc results from a database
 - unused Fey-based autoqc loader module removed
 - contamination autoqc check table: drop not-null constrain for fields with
   serialized data and replace empty strings there with nulls -
   InflateColumn::Serializer DBIx plugin gived error trying to convert
   empty string to JSON
 - DBIx binding generation extension - DBIx result classes for tables
     with autoqc results consume autoqc roles
 - autoqc data retrieval via the DBIx db binding

release 55.2
 - run upstream_tags check on whole bam file, not just forward read, otherwise check fails if there is an inline index in read 2
