@@ -1,0 +1,4 @@
+((perl-mode . ((indent-tabs-mode . nil)
+               (perl-indent-level . 2)
+               (tab-width . 2))))
+
