@@ -1,0 +1,6 @@
+Build*
+MYMETA*
+_build/
+blib/
+*~
+
