@@ -11,11 +11,6 @@ use warnings;
 use Test::More;
 use English qw(-no_match_vars);
 
-if (!$ENV{TEST_AUTHOR}) {
-  my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
-  plan( skip_all => $msg );
-}
-
 eval {
   require Test::Distribution;
 };
@@ -23,7 +18,7 @@ eval {
 if($EVAL_ERROR) {
   plan skip_all => 'Test::Distribution not installed';
 } else {
-  Test::Distribution->import('not' => [ qw(pod podcover prereq) ] );
+  Test::Distribution->import(only => [qw/versions description/], distversion => 1);
 }
 
 1;
