@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - git-based module and script versions
+
 release 56.0
  - use test data that are publicly available
  - getting autoqc module versions made to work with non-numeric versions
